@@ -1,3 +1,7 @@
+01 February 2009
+
+* The character pair #(command) may now contain (escaped) right parenthesis.
+
 30 January 2009
 
 * . now bound to "command-prompt 'move-window %%'" by default, from joshe.
@@ -1070,7 +1074,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.245 2009-01-30 21:10:10 nicm Exp $
+$Id: CHANGES,v 1.246 2009-02-01 18:14:49 tcunha Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
